correcting spacing problem in index.html

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -600,7 +600,7 @@ div.leftside {
 }
 
 div.rightside {
-    margin-left: 50px;
+    float: right;
 }
 
 .highlight {
